welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: illegal start of simple expression
 def estDevantLibre():Boolean = {
 ^Program:13: error: Unmatched closing brace '}' ignored here
}
^