welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = 
 def estDevantLibre():Boolean = {
    if (estFaceMur() == true) {
        return false;
    } else {
        return true;
     }
}[/!]
}
